tests/ui/extern/fictional-abi.rs
#![crate_type = "lib"]

pub extern "fictional" fn lol() {} //~ ERROR: invalid ABI
